--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <img class="primeira" src="mochi_opaco.png" alt="">
+        <img class="segunda" src="mochi_opaco.png" alt="">
         <!--<img class="segunda" src="mochi_opaco.png" alt=""> -->
     </header>
     <main>
@@ -17,17 +18,17 @@
             <h1 class="home_h1">MOCHI</h1>
             <h1 class="home_h1_parte2">LAND</h1>
             <button class="compre_agora">Compre agora</button>
-        </div>
+      
         <nav class="opcoes">
             <ul class="menu_vertical">
-                <li>MOCHI SHOP</li>
-                <li>REVIEWS</li>
-                <li>SOBRE O MOCHI</li>
+                <li><strong>MOCHI </strong>SHOP</li>
+                <li><a href="avalicoes.html">AVALIAÇÕES</a></li>
+                <li>SOBRE O <strong>MOCHI</strong></li>
                 <li>CONTATOS</li>
                 <li>PARCERIAS</li>
             </ul>
         </nav>
-
+        </div>
 
     </main>
 
