--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
         <img class="primeira" src="mochi_opaco.png" alt="">
         <img class="segunda" src="mochi_opaco.png" alt="">
-        <!--<img class="segunda" src="mochi_opaco.png" alt=""> -->
     </header>
     <main>
         <div class="centralizar">
@@ -23,9 +22,9 @@
             <ul class="menu_vertical">
                 <li><strong>MOCHI </strong>SHOP</li>
                 <li><a href="avalicoes.html">AVALIAÇÕES</a></li>
-                <li>SOBRE O <strong>MOCHI</strong></li>
-                <li>CONTATOS</li>
-                <li>PARCERIAS</li>
+                <li><a href="sobre.html">SOBRE O <strong>MOCHI</strong></a></li>
+                <li><a href="contatos.html">CONTATOS</a></li>
+                <li>GALERIA DE <strong>MOCHI</strong></li>
             </ul>
         </nav>
         </div>
