--- a/avalicoes.html
+++ b/avalicoes.html
@@ -9,30 +9,32 @@
 </head>
 <body>
     <header>
-        <!--IMAGENS DE FUNDO -->
+        <img class="primeira" src="mochi_opaco.png" alt="mochis">
+        <img class="segunda" src="mochi_opaco.png" alt="mochis">
     </header>
 
     <main>
     <h1> AVALIAÇÕES</h1>
     <img class="img_nota" src="nota_avaliacao.png" alt="nota de avaliação é de 4.9">
+
     <section>
-    <p class="miriam"><strong>Miriam Del'vechio</p></strong>
+    <p class="miriam"><strong>Chef Miriam Del'vechio</p></strong>
     <img class="foto_miriam" src="female_user.png" alt="icone de um usuário feminino">
-    <p class="avaliacao_miriam">Sou cliente da MOCHILAND há anos e nunca me decepciono! Os mochis de baunilha são incrivelmente macios e delicadamente aromatizados. O sabor é tão autêntico que parece que estão frescos da confeitaria japonesa. Recomendo a todos os amantes de doces!</p>
-    </section>
-
-<!--    <section>
-    <p><strong>Ária Bittercount</p></strong>
-    <img src="female_user.png" alt="icone de um usuário feminino">
-    <p>A MOCHILAND é simplesmente imbatível quando se trata de variedade e qualidade de mochis. O sabor de caramelo derrete na boca, é como uma explosão de doçura e suavidade.</p>
+    <p class="avaliacao_miriam">"Sou cliente da MOCHILAND há anos e nunca me decepciono! Os mochis de baunilha são incrivelmente macios e delicadamente aromatizados. O sabor é tão autêntico que parece que estão frescos da confeitaria japonesa. Recomendo a todos os amantes de doces!"</p>
     </section>
 
     <section>
-    <p><strong> Hernandes Ghedes</p></strong>
-    <img src="male_user.png" alt="icone de um usuário masculino">
-    <p>Que descoberta incrível é a MOCHILAND! Experimentei o mochi de coco e amêndoa e fiquei simplesmente maravilhado.</p>
+    <p class="aria"><strong>Chef Ária Bittercount</p></strong>
+    <img class="foto_aria" src="female_user.png" alt="icone de um usuário feminino">
+    <p class="avaliacao_aria">"A MOCHILAND é simplesmente imbatível quando se trata de variedade e qualidade de mochis. O sabor de caramelo derrete na boca, é como uma explosão de doçura e suavidade. Cada pedacinho é uma explosão de sabor, com um equilíbrio perfeito entre doçura e acidez."</p>
     </section>
-    </main> -->
+
+    <section>
+    <p class="hernandes"><strong>Chef Hernandes Ghedes</p></strong>
+    <img class="foto_hernandes" src="male_user.png" alt="icone de um usuário masculino">
+    <p class="avaliacao_hernandes">"Que descoberta incrível é a MOCHILAND! Experimentei o mochi de coco e amêndoa e fiquei simplesmente maravilhado. A doçura do mirtilo combinada com a suavidade do mochi cria uma experiência sensorial inigualável. É como uma festa para o paladar a cada mordida."</p>
+    </section>
+    </main>
 
     <footer>
     <a href="index.html"><img src="voltar.png" alt="icone de seta para voltar"></a>
