--- a/index.html
+++ b/index.html
@@ -6,18 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOCHILAND</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
         <img class="primeira" src="mochi_opaco.png" alt="">
         <img class="segunda" src="mochi_opaco.png" alt="">
     </header>
+
+    <!-- MENU TOGGLE // Parte do HTML -->
+<div class="menu_toggle">
+
+    <div id="toggle">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+    </div>
+
+<!-- MENU TOGGLE 
+    <div id="menu"> 
+        <p> teste </p>
+        <p> teste2</p>
+    </div>
+-->
+</div>
+    <!-- MENU TOGGLE -->
     <main>
+        <div class="mq">
         <div class="centralizar">
             <h1 class="home_h1">MOCHI</h1>
             <h1 class="home_h1_parte2">LAND</h1>
             <button class="compre_agora">Compre agora</button>
-      
+        </div>
         <nav class="opcoes">
             <ul class="menu_vertical">
                 <li><strong>MOCHI </strong>SHOP</li>
